--- a/web/viewer.css
+++ b/web/viewer.css
@@ -654,6 +654,11 @@ body {
   transform: translateX(-50%);
 }
 
+#toolbarArXivStamp {
+  margin-left: 30px;
+  border: 1px solid red;
+}
+
 #toolbarViewerLeft,
 #toolbarSidebarLeft {
   float: inline-start;
